# reddit-newsletter

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2b5adadf9d50_initial_schema.py
config/: newsletter.yaml  subreddits.yaml
scripts/: run_pipeline.py
src/newsletter/: config.py  database.py  main.py  models.py
src/newsletter/analyzer/: categorizer.py  prompts.py  synthesizer.py
src/newsletter/delivery/: email.py  scheduler.py
src/newsletter/pipeline/: orchestrator.py
src/newsletter/scraper/: reddit.py
src/newsletter/static/: filter.js  style.css
src/newsletter/templates/: archive.html  base.html  empty.html  newsletter.html
src/newsletter/web/: app.py  dependencies.py
